--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,22 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "build":"tsc -b",
+    "build": "tsc -b",
     "dev": "tsc -b && node dist/server.js"
   },
   "author": "LucidSynth",
   "license": "ISC",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6"
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.6",
+    "drizzle-kit": "^0.31.8",
+    "tsx": "^4.21.0"
   }
 }
