--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsc -b && node dist/server.js"
+    "dev": "tsc -b && node dist/server.js",
+    "start": "node dist/server.js"
   },
   "author": "LucidSynth",
   "license": "ISC",
